# src/main/java/br/com/bratatouille/management/sellableStock/controller/SellableStockApiDelegateImpl.java
@@ -1,7 +1,8 @@
 package br.com.bratatouille.management.sellableStock.controller;
 
 import br.com.bratatouille.management.generated.api.SellableStocksApiDelegate;
-import br.com.bratatouille.management.generated.model.SellableStockResponse;
+import br.com.bratatouille.management.generated.model.SellableStockAdminResponse;
+import br.com.bratatouille.management.generated.model.SellableStockCatalogResponse;
 import br.com.bratatouille.management.generated.model.SellableStockUpsertRequest;
 import br.com.bratatouille.management.sellableStock.service.SellableStockService;
 import org.springframework.http.ResponseEntity;
@@ -19,17 +20,27 @@ public class SellableStockApiDelegateImpl implements SellableStocksApiDelegate {
     }
 
     @Override
-    public ResponseEntity<List<SellableStockResponse>> findAllSellableStocks() {
-        return ResponseEntity.ok(sellableStockService.findAll());
+    public ResponseEntity<List<SellableStockCatalogResponse>> findAllSellableStocks() {
+        return ResponseEntity.ok(sellableStockService.findAllCatalog());
     }
 
     @Override
-    public ResponseEntity<SellableStockResponse> findSellableStockByItemId(Long itemId) {
-        return ResponseEntity.ok(sellableStockService.findByItemId(itemId));
+    public ResponseEntity<SellableStockCatalogResponse> findSellableStockByItemId(Long itemId) {
+        return ResponseEntity.ok(sellableStockService.findCatalogByItemId(itemId));
     }
 
     @Override
-    public ResponseEntity<SellableStockResponse> upsertSellableStock(Long itemId, SellableStockUpsertRequest request) {
+    public ResponseEntity<List<SellableStockAdminResponse>> findAllSellableStockAdmin() {
+        return ResponseEntity.ok(sellableStockService.findAllAdmin());
+    }
+
+    @Override
+    public ResponseEntity<SellableStockAdminResponse> findSellableStockAdminByItemId(Long itemId) {
+        return ResponseEntity.ok(sellableStockService.findAdminByItemId(itemId));
+    }
+
+    @Override
+    public ResponseEntity<SellableStockAdminResponse> upsertSellableStock(Long itemId, SellableStockUpsertRequest request) {
         return ResponseEntity.ok(sellableStockService.upsert(itemId, request));
     }
 }
